Added tag line in index.

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -36,7 +36,7 @@
           <div class="container">
             <div class="row">
               <div class="welcome">
-                <h1 class="welcome-title">Welcome to Mediliza, the leading volunteer interaction platform.</h1>
+                <h1 class="welcome-title">Welcome to <em>Mediliza</em>, organizing volunteers for those most in need.</h1>
                 <p class="welcome-txt">The speed of recovery and quality of life of patients is greatly increased by the interactions they have with volunteers throughout the hospital.  The medical team will gain greater understanding of the patient's daily activites and recovery.  The volunteer team will have a streamlined method of recording their interactions with patients which will contribute to the patients overall wellbeing. 
                 </p>
               </div>
