Fixed logo home button; refactored comments.

--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -16,7 +16,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo" href="#">
+                <a class="navbar-brand logo" href="/">
                   <span><i class="fa fa-stethoscope"></i></span>
                   Mediliza
                 </a>
