--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -34,7 +34,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo" href="#">
+                <a class="navbar-brand logo" href="/">
                   <span><i class="fa fa-stethoscope"></i></span>
                   Mediliza
                 </a>
@@ -100,57 +100,5 @@
                 </ul>
               </div>
             </div>
-
-                      
-             
-<!-- 
-
-    <section id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <ul class="text-center contact">
-                  <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Facebook" class="facebook"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Twitter" class="twitter"><i class="fa fa-twitter"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Google +" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Instagram" class="instagram"><i class="fa fa-instagram"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Share in Pinterest" class="pinterest"><i class="fa fa-pinterest"></i></a>
-              </li>
-              <li class= "socials-icons">
-                <a href="#" data-toggle="tooltip" title="Connect with Skype" class="skype"><i class="fa fa-skype"></i></a>
-              </li>
-                </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="copy-right-text text-center">
-              &copy; Copyright 2014, Your Website Link. Theme by <a href="https://themewagon.com/">ThemeWagon</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/wow.min.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/isotope.pkgd.min.js"></script>    
-
-
-
-    <script>
-          new WOW().init();
-    </script>
-
   </body>
 </html>
