--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -34,7 +34,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo" href="/">
+                <a class="navbar-brand logo" href="#">
                   <span><i class="fa fa-stethoscope"></i></span>
                   Mediliza
                 </a>
@@ -100,5 +100,17 @@
                 </ul>
               </div>
             </div>
+
+    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/wow.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/isotope.pkgd.min.js"></script>    
+
+
+
+    <script>
+          new WOW().init();
+    </script>
+
   </body>
 </html>
