Fixed navigation bar.

--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -41,16 +41,14 @@
             </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li class="active"><a href="#">Volunteer</a></li>
-              <li><a href="faq.html">FAQs</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
+               <li><a href="/">Home</a></li>
+               <li><a href="/volunteer_home_page">Volunteers</a></li>
+               <li><a href="/enduser">Nurses</a></li>
+               <li><a href="/volunteer_patient_page/search/?">Family</a></li>
+             </ul>
+          </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
     </section>
