Fixed spacing in vol page.

--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -80,14 +80,10 @@
       <div class= "container">
         <div class= "row">
           <main class="blog1col col-md-9">
-             
           </main>
-
-          
           <!-- <aside class="col-md-3 "> -->
-            <div class="widget widget_categories" id="categories-3">                
-                
-r              <h4><div style="padding-top: 50px" class="text-center">Most recently visited patients: </div></h4>
+            <div class="widget widget_categories" id="categories-3">               
+              <h4><div class="text-center">Most recently visited patients: </div></h4>
               <div class="text-center">
                 <ul>
                   <% @volunteer.last_interactions.each do |interaction| %>
