vol patient page bottom margin.

--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -103,7 +103,7 @@
                 </div> 
       </form>  
       </br>
-       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" style="align: center">
+       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" style="align: center; padding-bottom: 30px;">
             <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
           </div>  
           </div>
