--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -34,7 +34,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand logo" href="#">
+                <a class="navbar-brand logo" href="/">
                   <span><i class="fa fa-stethoscope"></i></span>
                   Mediliza
                 </a>
