--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -50,7 +50,7 @@
                 height: 150px;
                 width: 150px;"
               ><div class="container">
-              <div id="enter" class="container-fluid row text-center service"><p><a href="/volunteer_home_page"> 
+              <div id="enter" style="padding-top: 0px" class="container-fluid row text-center service"><p><a href="/volunteer_home_page"> 
                           <div type="submit" class="row-fluid service-icon text-center" >
                             <i class="fa fa-stethoscope fa-5x"></i>
                           </div>
