Added previous interactions; but not responsive.

--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -83,7 +83,7 @@
           </main>
           <!-- <aside class="col-md-3 "> -->
             <div class="widget widget_categories" id="categories-3">               
-              <h4><div class="text-center">Most recently visited patients: </div></h4>
+              <h4><div class="text-center">Patients I visited recently: </div></h4>
               <div class="text-center">
                 <ul>
                   <% @volunteer.last_interactions.each do |interaction| %>
