Interactions belong to patient and volun; but not time

--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -120,6 +120,7 @@
                   </br>
                 </div>
                 <input type= "hidden" value=<%= @patient.id %> name = "id">
+                <input type= "hidden" value=<%= @patient.id %> name = "id">
                 <div>
                    <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
                    <input class="btn btn-primary" type= "submit" name= "submit" > 
