--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -47,6 +47,10 @@
                <li><a href="/volunteer_home_page">Volunteers</a></li>
                <li><a href="/enduser">Nurses</a></li>
                <li><a href="/volunteer_patient_page/search/?">Family</a></li>
+                <% if session[:vid] %>
+                  <% session.clear %>
+                  <li><a href="/">Logout</a></li>
+                <% end %>
              </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
