--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -30,8 +30,7 @@
                 <li><a href="/enduser">Nurses</a></li>
                 <li><a href="/volunteer_patient_page/search/?">Family</a></li>
                 <% if session[:vid] %>
-                  <% session.clear %>
-                  <li><a href="/">Logout</a></li>
+                  <li><a href="/logout">Logout</a></li>
                 <% end %>
               </ul>
             </div><!-- /.navbar-collapse -->
