Fixed style in enduser1 and edited text in vol home page.

--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -33,10 +33,10 @@
     </section>
 
     <section class="blog-title text-center">
-      <div class="blog-wrapper">
+      <div class="blog-wrapper" style="height: 220px;">
         <div class="container">
           <div class= "row">  
-            <h1 class="headline">Your Patients</h1>
+            <h1 class="headline" style="padding-top: 100px;">Your Patients</h1>
           </div>
             <div class="row">
               <div class="btn-group">
