--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -55,7 +55,29 @@
       </div>
     </section>
 
-    
+    <section class= "blog-content">
+      <div class= "container">
+        <div class= "row">
+          <main class="blog1col col-md-9">
+          </main>
+          <!-- <aside class="col-md-3 "> -->
+          <div class="widget widget_categories" id="categories-3">               
+            <h4><div class="text-center">My Patients: </div></h4>
+            <div class="text-center">
+              <ul>
+                <% @staff.patients.each do |patient| %>
+                  <li class="cat-item cat-item-4">
+                    <a href="/enduser2/<%= patient.id %> " title="View all posts filed under Data"><%="#{patient.first_name} #{patient.last_name} "%></a> 
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <section id="footer">
       <div class="container">
         <div class="row">
