--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -85,18 +85,21 @@
           <main class="blog1col col-md-9">
           </main>
           <!-- <aside class="col-md-3 "> -->
-            <div class="widget widget_categories" id="categories-3">               
-              <h4><div class="text-center">Patients you visited recently: </div></h4>
-              <div class="text-center">
-                <ul>
-                  <% @volunteer.last_interactions.each do |interaction| %>
-                    <li class="cat-item cat-item-4">
-                      <a href="/volunteer_patient_page/<%= interaction.patient.id %> " title="View all posts filed under Data"><%="#{interaction.patient.first_name} #{interaction.patient.last_name} "%></a> 
-                    </li>
-                  <% end %>
-                </ul>
-              </div>
+          <div class="widget widget_categories" id="categories-3">               
+            <h4><div class="text-center">Patients I visited recently: </div></h4>
+            <div class="text-center">
+              <ul>
+                <% @volunteer.last_interactions.each do |interaction| %>
+                  <li class="cat-item cat-item-4">
+                    <a href="/volunteer_patient_page/<%= interaction.patient.id %> " title="View all posts filed under Data"><%="#{interaction.patient.first_name} #{interaction.patient.last_name} "%></a> 
+                  </li>
+                <% end %>
+              </ul>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/wow.min.js"></script>
