enduser homepage welcome text updated.

--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -36,7 +36,7 @@
       <div class="blog-wrapper" style="height: 220px;">
         <div class="container">
           <div class= "row">  
-            <h1 class="headline" style="padding-top: 100px;">Your Patients</h1>
+            <h2 class="headline" style="padding-top: 100px;">Welcome <%="#{@staff.first_name}"%></h2>
           </div>
             <div class="row">
               <div class="btn-group">
