--- a/app/views/volunteer_home_page.erb
+++ b/app/views/volunteer_home_page.erb
@@ -79,7 +79,7 @@
       </div>
     </section>
 
-    <section class= "blog-content">
+    <section class= "blog-content" style="padding-bottom: 100px;">
       <div class= "container">
         <div class= "row">
           <main class="blog1col col-md-9">
@@ -100,6 +100,20 @@
         </div>
       </div>
     </section>
+
+
+    <section id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="copy-right-text text-center">
+              &copy; Theme by <a href="https://themewagon.com/">ThemeWagon</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <script type="text/javascript" src="assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/wow.min.js"></script>
