--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -130,7 +130,7 @@
                 </div> 
       </form>  
       </br>
-       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad"; padding-bottom: 30px;">
+       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
             <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
           </div>  
           </div>
@@ -140,6 +140,18 @@
         </div>
       </div>
     </div>
+
+    <section id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="copy-right-text text-center">
+              &copy; Theme by <a href="https://themewagon.com/">ThemeWagon</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
