Fixed footer padding.

--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <section class= "blog-content">
+    <section class= "blog-content" style="padding-bottom: 100px;">
       <div class= "container">
         <div class= "row">
           <main class="blog1col col-md-9">
