--- a/app/views/enduser2.erb
+++ b/app/views/enduser2.erb
@@ -37,10 +37,10 @@
     </section>
 <%item = @chosen%>
     <section class="blog-title text-center">
-      <div class="blog-wrapper">
+      <div class="blog-wrapper" style="height: 220px;">
         <div class="container">
           <div class= "row">  
-            <h1 class="headline"><%="#{item.first_name} #{item.last_name}"%></h1>
+            <h1 class="headline" style="padding-top: 100px"><%="#{item.first_name} #{item.last_name}"%></h1>
           </div>
           </div>  
         </div>
@@ -48,7 +48,7 @@
     </section>
 
     
-      <section class= "blog-content">
+      <section class= "blog-content" style="padding-bottom: 100px;">
         <div class= "container">
           <div class= "row">
             <main class="blog1col col-md-9">    
