--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -26,6 +26,10 @@
                   <li><a href="/">Home</a></li>
                   <li><a href="/volunteer_home_page">Volunteers</a></li>
                   <li><a href="/enduser">Nurses</a></li>
+                  <li><a href="/volunteer_patient_page/search/?">Family</a></li>
+                  <% if session %>
+                  <li><a href="/">Logout</a></li>
+                <% end %>
                 </ul>
             </div><!-- navbar-collapse -->
         </div><!-- container-fluid -->
