--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -28,7 +28,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/volunteer_home_page">Volunteers</a></li>
                 <li><a href="/enduser">Nurses</a></li>
-                <li><a href="/volunteer_patient_page/search/?">Family</a></li>
+                <li><a href="/search/?">Family</a></li>
                 <% if session[:vid] %>
                   <li><a href="/logout">Logout</a></li>
                 <% end %>
