--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -22,7 +22,10 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/volunteer_home_page">Volunteers</a></li>
                 <li><a href="/enduser">Nurses</a></li>
-                <li><a href="/volunteer_patient_page/search/?">Family</a></li>
+                <li><a href="/search/?">Family</a></li>
+                <% if session[:vid] || session[:sid] %>
+                  <li><a href="/logout">Logout</a></li>
+                <% end %>
               </ul>
             </div><!-- navbar-collapse -->
         </div><!-- container-fluid -->
