Fixed footer margin.

--- a/app/views/enduser2.erb
+++ b/app/views/enduser2.erb
@@ -48,7 +48,7 @@
     </section>
 
     
-      <section class= "blog-content" style="padding-bottom: 100px;">
+      <section class= "blog-content">
         <div class= "container">
           <div class= "row">
             <main class="blog1col col-md-9">    
@@ -68,7 +68,7 @@
       </section>
   
 
-    <section id="footer">
+    <section id="footer" style="margin-top: 100px;">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
