--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -87,7 +87,7 @@
                     </tbody>
                   </table>
             </div>
-            <div class="widget widget_categories" id="categories-3" style="position: center">
+
       <section class="faq-content">
         <div class="container">
           <div class="row">
@@ -112,36 +112,38 @@
             </div>
           </div>
         </section>
-      <form action = " /volunteer_patient_page" method = "post" > 
-        <h3> Observation and comments</h3>
-        <textarea type= "text" name = "observation" rows = "6" cols = "40" >  </textarea>
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" name = "beverage" />
-                    Did Patient drink water during visit? 
-                  </label>
-                  </br>
-                </div>
-                <input type= "hidden" value=<%= @patient.id %> name = "id">
-                <input type= "hidden" value=<%= @patient.id %> name = "id">
-                <div>
-                   <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
-                   <input class="btn btn-primary" type= "submit" name= "submit" > 
-                </div> 
-      </form>  
-      </br>
-       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
-            <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
-          </div>  
-          </div>
-          </main>
-         
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="widget widget_categories" id="categories-3" style="position: center">
+      
 
-    <section id="footer">
+      <% if session[:vid] %>
+        <form action = " /volunteer_patient_page" method = "post" > 
+          <h3> Observation and comments</h3>
+          <textarea type= "text" name = "observation" rows = "6" cols = "40" >  </textarea>
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" name = "beverage" />
+                      Did Patient drink water during visit? 
+                    </label>
+                    </br>
+                  </div>
+                  <input type= "hidden" value=<%= @patient.id %> name = "id">
+                  <input type= "hidden" value=<%= @patient.id %> name = "id">
+                  <div>
+                     <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
+                     <input class="btn btn-primary" type= "submit" name= "submit" > 
+                  </div> 
+        </form>  
+        </br>
+         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
+              <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
+          </div>  
+      <% else %>
+        
+      <% end %>
+        
+  </div>
+
+    <section id="footer" style="margin-top: 100px;">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
