--- a/app/views/enduser1.erb
+++ b/app/views/enduser1.erb
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <section class= "blog-content" style="padding-bottom: 100px;">
+    <section class= "blog-content">
       <div class= "container">
         <div class= "row">
           <main class="blog1col col-md-9">
@@ -80,7 +80,7 @@
       </div>
     </section>
 
-    <section id="footer">
+    <section id="footer" style="margin-top: 100px;">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
