Fixed search mobile width.

--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="img/season-change.jpg" type="image/x-icon">
-    <title>Mediliza Homepage</title>
+    <title>Mediliza</title>
 
       <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
       <!-- <link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
@@ -64,7 +64,7 @@
                 <h1 class="welcome-title">Find patient interaction records:</h1>
               </div>
                 
-                <div class="row text-center">
+                <div style="margin-right: 0px;" class="row text-center">
                   <div style="padding-bottom: 200px;" class="about-service text-center">
                     <h3>
                       <% if @patient && @patient.errors.any? %>
