Only 1 patient page thats dynamic.

--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -53,8 +53,8 @@
         <div class= "row">
           <main class="text-center">
             <div class="panel panel-info" style="border: none;">
-              <div class="panel-heading">
-                <h3 class="panel-title"><%= "#{@patient.first_name} #{@patient.last_name} "%></h3>
+              <div style="margin-bottom: 20px;" class="panel-heading">
+                <h2><%= "#{@patient.first_name} #{@patient.last_name} "%></h2>
               </div>
               <div class="panel-body">
                   <table class="table table-user-information">
