--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -167,9 +167,9 @@
                   </div> 
         </form>  
         </br>
-         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
               <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
-          </div>  
+        </div>  
       <% elsif session[:fid] %>
         <form action = " /volunteer_patient_page" method = "post" > 
           <h3>Request:</h3>
@@ -180,6 +180,10 @@
              <input class="btn btn-primary" type= "submit" name= "submit" > 
           </div> 
         </form> 
+      <% elsif session[:sid] %>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad;" style="padding-bottom: 30px;">
+              <a href="/enduser" class="btn btn-primary">Back to list of patients</a>
+        </div>  
       <% end %>
         
   </div>
