--- a/app/views/volunteer_patient_page.erb
+++ b/app/views/volunteer_patient_page.erb
@@ -171,9 +171,10 @@
               <a href="/volunteer_home_page" class="btn btn-primary">Back to list of patients</a>
         </div>  
       <% elsif session[:fid] %>
-        <form action = " /volunteer_patient_page" method = "post" > 
+        <form action = " /volunteer_patient_page" method = "post" >
+          <input type="hidden" name="_method" value="put"> 
           <h3>Request:</h3>
-          <textarea type= "text" name = "observation" rows = "6" cols = "40" >  </textarea>
+          <textarea type= "text" name = "request" rows = "6" cols = "40" ><%= @patient.request %></textarea>
           <input type= "hidden" value=<%= @patient.id %> name = "id">
           <div>
              <!-- <a href="#" class="btn btn-primary">Save Comments</a> -->
